[project]
name = "ai-reasearch-multi-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-core>=1.2.28",
    "langchain-openai>=1.1.12",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.1.6",
    "lxml>=6.0.4",
    "openai>=2.31.0",
    "pydantic>=2.13.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "tavily-python>=0.7.23",
    "uvicorn>=0.44.0",
]
